--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<p>Version 0.03 | 14.10.25 22:52</p>
+<p>Version 0.04 | 14.10.25 23:01</p>
 <h2>🔧 Palo Alto Object Generator</h2>
 
 <label>Destination Address Group Name:</label>
@@ -39,7 +39,10 @@
 </div>
 
 <label>List of IPs or FQDNs (one per line):</label>
-<textarea id="inputList" rows="10" placeholder="192.168.0.1/32,Notebook von Julian\ngoogle.de,Google website\n192.168.0.266,Invalid IP test"></textarea>
+<textarea id="inputList" rows="10" placeholder="192.168.0.1/32,Notebook von Julian
+  google.de,Google website
+  192.168.0.266,Invalid IP
+  192.168.0.1/34, Invalid Mask"></textarea>
 
 <label>Input Preview (invalid IPs highlighted):</label>
 <div class="highlight-box" id="previewBox"></div>
