--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<p>Version 0.05 | 14.10.25 23:04</p>
+<p>Version 0.06 | 14.10.25 23:08</p>
 <h2>🔧 Palo Alto Object Generator</h2>
 
 <label>Destination Address Group Name:</label>
@@ -41,6 +41,7 @@
 <label>List of IPs or FQDNs (one per line):</label>
 <textarea id="inputList" rows="10" placeholder="
   192.168.0.1/32,Notebook von Rüdiger
+  NB-Schanze01.altschauerberg.de,Rainer Winkler
   google.de,Google Website
   192.168.0.266/32,Invalid IP
   192.168.0.1/34,Invalid Mask"></textarea>
