--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <label>List of IPs or FQDNs (one per line):</label>
 <textarea id="inputList" rows="10" placeholder="
   192.168.0.1/32,Notebook von Rüdiger
-  NB-Schanze01.altschauerberg.de,Rainer Winkler
+  NB-Schanze01.altschauerberg.de,Rainer Drachenlord
   google.de,Google Website
   192.168.0.266/32,Invalid IP
   192.168.0.1/34,Invalid Mask"></textarea>
