--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<p>Version 0.06 | 14.10.25 23:08</p>
+
 <h2>🔧 Palo Alto Object Generator</h2>
 
 <label>Destination Address Group Name:</label>
@@ -175,4 +175,7 @@ document.getElementById("useTag").addEventListener("change", generateCommands);
 </script>
 
 </body>
+  <footer>
+    <p>Version 0.06 | 14.10.25 23:08</p>
+  </footer>
 </html>
