--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     .tag-row { display: flex; align-items: center; gap: 10px; margin-bottom: 10px; }
     .highlight-box { background: #fff; border: 1px solid #ccc; padding: 10px; font-family: monospace; white-space: pre-wrap; margin-bottom: 10px; }
     .invalid { color: red; font-weight: bold; }
+    .footer {  text-align: right; }
   </style>
 </head>
 <body>
@@ -176,6 +177,6 @@ document.getElementById("useTag").addEventListener("change", generateCommands);
 
 </body>
   <footer>
-    <p>Version 0.06 | 14.10.25 23:08</p>
+    <p class="footer">Version 0.10 | 14.10.25 23:15</p>
   </footer>
 </html>
