--- a/index.html
+++ b/index.html
@@ -177,6 +177,6 @@ document.getElementById("useTag").addEventListener("change", generateCommands);
 
 </body>
   <footer>
-    <p class="footer">Version 0.10 | 14.10.25 23:15</p>
+    <p class="footer">Version 0.10 | Last Edited: 14.10.25 23:15</p>
   </footer>
 </html>
