--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     .tag-row { display: flex; align-items: center; gap: 10px; margin-bottom: 10px; }
     .highlight-box { background: #fff; border: 1px solid #ccc; padding: 10px; font-family: monospace; white-space: pre-wrap; margin-bottom: 10px; }
     .invalid { color: red; font-weight: bold; }
-    .footer {  text-align: right; }
+    .footer { text-align: right; margin-top: 18px; }
   </style>
 </head>
 <body>
-
 
 <h2>🔧 Palo Alto Object Generator</h2>
 
@@ -39,15 +38,14 @@
   <input type="text" id="tagName" class="half" placeholder="Tag Name (e.g. TrendMicro)">
 </div>
 
-<label>List of IPs or FQDNs (one per line):</label>
-<textarea id="inputList" rows="10" placeholder="
-  192.168.0.1/32,Notebook von Rüdiger
-  NB-Schanze01.altschauerberg.de,Rainer Drachenlord
-  google.de,Google Website
-  192.168.0.266/32,Invalid IP
-  192.168.0.1/34,Invalid Mask"></textarea>
+<label>List of IPs or FQDNs (one per line). Use comma to add a description:</label>
+<textarea id="inputList" rows="10" placeholder="192.168.0.1/32,Notebook von Rüdiger
+NB-Schanze01.altschauerberg.de,Rainer Drachenlord
+google.de,Google Website
+192.168.0.266/32,Invalid IP
+192.168.0.1/34,Invalid Mask"></textarea>
 
-<label>Input Preview (invalid IPs highlighted):</label>
+<label>Input Preview (invalid lines highlighted):</label>
 <div class="highlight-box" id="previewBox"></div>
 
 <label>Generated CLI Output:</label>
@@ -68,7 +66,8 @@ function isValidIP(ip) {
   const parts = ip.split(".");
   if (parts.length !== 4) return false;
   return parts.every(p => {
-    const n = parseInt(p);
+    if (p === "") return false;
+    const n = parseInt(p, 10);
     return !isNaN(n) && n >= 0 && n <= 255;
   });
 }
@@ -78,7 +77,7 @@ function generateCommands() {
   const altPrefix = document.getElementById("altPrefix").value.trim();
   const useTag = document.getElementById("useTag").checked;
   const tagInput = document.getElementById("tagName").value.trim();
-  const inputList = document.getElementById("inputList").value.trim().split("\n").filter(Boolean);
+  const rawLines = document.getElementById("inputList").value.split("\n");
 
   const tagName = "S_" + sanitizeName(tagInput || groupName);
   const groupFullName = "S_HG_" + sanitizeName(groupName).slice(0, 58);
@@ -86,6 +85,7 @@ function generateCommands() {
   const commands = [];
   const warnings = [];
   const previewLines = [];
+  const seenEntries = new Set();
 
   commands.push("configure");
 
@@ -94,15 +94,48 @@ function generateCommands() {
     commands.push(`set shared tag ${tagName} comments "Auto-generated tag for ${tagInput || groupName}"`);
   }
 
-  inputList.forEach(line => {
-    const [rawEntry, customDesc] = line.split(",").map(s => s.trim());
+  rawLines.forEach((lineRaw, index) => {
+    const originalLine = lineRaw;
+    const line = lineRaw.trim();
+
+    if (line === "") {
+      warnings.push(`⚠️ Line ${index + 1} is empty — skipped.`);
+      previewLines.push(`<span class="invalid">${escapeHtml(originalLine || "(empty)")}</span>`);
+      return;
+    }
+
+    if (lineRaw !== line) {
+      warnings.push(`⚠️ Line ${index + 1} had leading/trailing spaces — cleaned.`);
+    }
+
+    // Parse entry and optional description
+    const parts = line.split(",");
+    const rawEntry = (parts[0] || "").trim();
+    const customDesc = (parts.slice(1).join(",") || "").trim(); // allow commas in description
     let entry = rawEntry;
     let description = customDesc || "";
+
+    // Detect internal whitespace in the entry (not the description)
+    if (/\s/.test(rawEntry)) {
+      warnings.push(`⚠️ Entry "${rawEntry}" on line ${index + 1} contains spaces — skipped.`);
+      previewLines.push(`<span class="invalid">${escapeHtml(line)}</span>`);
+      return;
+    }
+
+    // Normalize for duplicate detection (case-insensitive for FQDNs)
+    const normalized = entry.toLowerCase();
+    if (seenEntries.has(normalized)) {
+      warnings.push(`⚠️ Duplicate entry "${entry}" on line ${index + 1} — skipped.`);
+      previewLines.push(`<span class="invalid">${escapeHtml(line)}</span>`);
+      return;
+    }
+    seenEntries.add(normalized);
 
     let ip = "", mask = "", fqdn = "";
     let isIP = false;
     let isInvalidIP = false;
 
+    // CIDR form
     if (entry.includes("/")) {
       const [ipPart, cidrPart] = entry.split("/");
       if (isValidIP(ipPart) && isValidCIDR(cidrPart)) {
@@ -111,8 +144,8 @@ function generateCommands() {
         mask = cidrPart;
         entry = `${ip}/${mask}`;
       } else if (isValidIP(ipPart)) {
-        warnings.push(`⚠️ Invalid subnet mask "/${cidrPart}" for ${ipPart} — skipped.`);
-        previewLines.push(`<span class="invalid">${line}</span>`);
+        warnings.push(`⚠️ Invalid subnet mask "/${cidrPart}" for ${ipPart} on line ${index + 1} — skipped.`);
+        previewLines.push(`<span class="invalid">${escapeHtml(line)}</span>`);
         return;
       } else {
         isInvalidIP = true;
@@ -124,17 +157,19 @@ function generateCommands() {
     } else if (/^\d{1,3}(\.\d{1,3}){3}$/.test(entry)) {
       isInvalidIP = true;
     } else {
+      // treat as FQDN, strip any trailing slash parts
       fqdn = entry.split("/")[0];
       entry = fqdn;
     }
 
     if (isInvalidIP) {
-      previewLines.push(`<span class="invalid">${line}</span>`);
-      warnings.push(`⚠️ Invalid IP "${entry}" — skipped.`);
+      warnings.push(`⚠️ Invalid IP "${entry}" on line ${index + 1} — skipped.`);
+      previewLines.push(`<span class="invalid">${escapeHtml(line)}</span>`);
       return;
-    } else {
-      previewLines.push(line);
     }
+
+    // valid entry: add to preview (original line displayed)
+    previewLines.push(escapeHtml(line));
 
     const baseName = sanitizeName(entry);
     let objectName = altPrefix
@@ -146,10 +181,10 @@ function generateCommands() {
 
     if (isIP) {
       commands.push(`set shared address ${objectName} ip-netmask ${entry}`);
-      commands.push(`set shared address ${objectName} description "${description || ip}"`);
+      commands.push(`set shared address ${objectName} description "${escapeForCli(description || ip)}"`);
     } else {
       commands.push(`set shared address ${objectName} fqdn ${entry}`);
-      commands.push(`set shared address ${objectName} description "${description || fqdn}"`);
+      commands.push(`set shared address ${objectName} description "${escapeForCli(description || fqdn)}"`);
     }
 
     if (useTag) {
@@ -168,15 +203,27 @@ function generateCommands() {
   document.getElementById("previewBox").innerHTML = previewLines.join("<br>");
 }
 
+// small helper: escape HTML for preview
+function escapeHtml(s) {
+  return (s || "").replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;");
+}
+// escape quotes/newlines for CLI values
+function escapeForCli(s) {
+  return (s || "").replace(/"/g, '\\"');
+}
+
 document.getElementById("groupName").addEventListener("input", generateCommands);
 document.getElementById("altPrefix").addEventListener("input", generateCommands);
 document.getElementById("tagName").addEventListener("input", generateCommands);
 document.getElementById("inputList").addEventListener("input", generateCommands);
 document.getElementById("useTag").addEventListener("change", generateCommands);
+
+// initial run to populate preview/output
+generateCommands();
 </script>
 
+<footer>
+  <p class="footer">Version 0.12 | Last Edited: 14.10.25 23:45</p>
+</footer>
 </body>
-  <footer>
-    <p class="footer">Version 0.10 | Last Edited: 14.10.25 23:15</p>
-  </footer>
 </html>
