--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
 <label>Destination Address Group Name:</label>
 <div class="row">
-  <input type="text" id="groupName" placeholder="e.g. TrendMicro">
+  <input type="text" id="groupName" placeholder="e.g. TrendMicro | Achtung S_HG_ wird automatisch hinzugefügt !!! ">
 </div>
 
 <label>Alternate Name Prefix (optional):</label>
 <div class="row">
-  <input type="text" id="altPrefix" placeholder="e.g. AV">
+  <input type="text" id="altPrefix" placeholder="nur sinnvoll wenn man z.B Blöcke wie CLOUDFLARE oder TrendMicro zusammen haben möchte">
 </div>
 
 <label>Tag Options:</label>
