Modify tag input placeholder text
Updated the placeholder text for the tag input field to include additional instructions.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="tag-row">
   <input type="checkbox" id="useTag">
   <label for="useTag">Include Tag</label>
-  <input type="text" id="tagName" class="half" placeholder="Tag Name (e.g. TrendMicro)">
+  <input type="text" id="tagName" class="half" placeholder="Tag Name (e.g. TrendMicro) | Achtung S_ wird automatisch hinzugefügt !!!">
 </div>
 
 <label>List of IPs or FQDNs (one per line). Use comma to add a description:</label>
