--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<h2>🔧 Palo Alto Object Generator</h2>
+<h2>🔧 Panorama <u>shared</u> Object Generator</h2>
 
 <label>Destination Address Group Name:</label>
 <div class="row">
