Add GitHub source link to footer
Updated footer to include source link to GitHub.

--- a/index.html
+++ b/index.html
@@ -223,7 +223,11 @@ generateCommands();
 </script>
 
 <footer>
-  <p class="footer">Version 0.13 | Last Edited: 22.10.25 21:45</p>
+  <p class="footer">
+    Version 0.13 | Last Edited: 22.10.25 21:45
+    <hr>
+    Source can be found on  <a href="https://github.com/thetschulian/PaloAlto-Helper">Github</a>
+  </p>
 </footer>
 </body>
 </html>
