--- a/index.html
+++ b/index.html
@@ -3,8 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <title>Palo Helper by tschuli</title>
+
   <style>
     body { font-family: monospace; padding: 20px; background: #f4f4f4; }
+
+    /* Tabs */
+    .tabs { display: flex; gap: 10px; margin-bottom: 20px; }
+    .tab-button {
+      padding: 8px 16px;
+      background: #ddd;
+      border: 1px solid #aaa;
+      cursor: pointer;
+      font-family: monospace;
+    }
+    .tab-button.active {
+      background: #fff;
+      border-bottom: 2px solid #000;
+    }
+    .tab-content { display: none; }
+    .tab-content.active { display: block; }
+
+    /* Layout */
     .row { display: flex; gap: 20px; margin-bottom: 10px; }
     .row input { flex: 1; padding: 6px; font-family: monospace; }
     .half { flex: 0.5; padding: 6px; font-family: monospace; }
@@ -17,7 +36,17 @@
     .footer { text-align: right; margin-top: 18px; }
   </style>
 </head>
+
 <body>
+
+<!-- TAB BUTTONS -->
+<div class="tabs">
+  <button class="tab-button active" data-tab="tab1">Object Generator</button>
+  <button class="tab-button" data-tab="tab2">tbd</button>
+</div>
+
+<!-- TAB 1 CONTENT -->
+<div id="tab1" class="tab-content active">
 
 <h2>🔧 Panorama <u>shared</u> Object Generator</h2>
 
@@ -52,7 +81,17 @@ google.de,Google Website
 <div class="warning" id="warningBox"></div>
 <div class="output" id="outputBox"></div>
 
+</div>
+
+<!-- TAB 2 CONTENT -->
+<div id="tab2" class="tab-content">
+  <h2>🔧 tbd </h2>
+  <p>tbd.</p>
+</div>
+
 <script>
+/* ------------------ Helper Functions ------------------ */
+
 function sanitizeName(name) {
   return name.replace(/[^a-zA-Z0-9_.-]/g, "_");
 }
@@ -71,6 +110,16 @@ function isValidIP(ip) {
     return !isNaN(n) && n >= 0 && n <= 255;
   });
 }
+
+function escapeHtml(s) {
+  return (s || "").replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;");
+}
+
+function escapeForCli(s) {
+  return (s || "").replace(/"/g, '\\"');
+}
+
+/* ------------------ Main Generator ------------------ */
 
 function generateCommands() {
   const groupName = document.getElementById("groupName").value.trim();
@@ -108,21 +157,18 @@ function generateCommands() {
       warnings.push(`⚠️ Line ${index + 1} had leading/trailing spaces — cleaned.`);
     }
 
-    // Parse entry and optional description
     const parts = line.split(",");
     const rawEntry = (parts[0] || "").trim();
-    const customDesc = (parts.slice(1).join(",") || "").trim(); // allow commas in description
+    const customDesc = (parts.slice(1).join(",") || "").trim();
     let entry = rawEntry;
     let description = customDesc || "";
 
-    // Detect internal whitespace in the entry (not the description)
     if (/\s/.test(rawEntry)) {
       warnings.push(`⚠️ Entry "${rawEntry}" on line ${index + 1} contains spaces — skipped.`);
       previewLines.push(`<span class="invalid">${escapeHtml(line)}</span>`);
       return;
     }
 
-    // Normalize for duplicate detection (case-insensitive for FQDNs)
     const normalized = entry.toLowerCase();
     if (seenEntries.has(normalized)) {
       warnings.push(`⚠️ Duplicate entry "${entry}" on line ${index + 1} — skipped.`);
@@ -135,7 +181,6 @@ function generateCommands() {
     let isIP = false;
     let isInvalidIP = false;
 
-    // CIDR form
     if (entry.includes("/")) {
       const [ipPart, cidrPart] = entry.split("/");
       if (isValidIP(ipPart) && isValidCIDR(cidrPart)) {
@@ -157,7 +202,6 @@ function generateCommands() {
     } else if (/^\d{1,3}(\.\d{1,3}){3}$/.test(entry)) {
       isInvalidIP = true;
     } else {
-      // treat as FQDN, strip any trailing slash parts
       fqdn = entry.split("/")[0];
       entry = fqdn;
     }
@@ -168,10 +212,17 @@ function generateCommands() {
       return;
     }
 
-    // valid entry: add to preview (original line displayed)
     previewLines.push(escapeHtml(line));
 
-    const baseName = sanitizeName(entry);
+    /* ------------------ NEW NAMING LOGIC ------------------ */
+    let baseName;
+
+    if (isIP) {
+      baseName = sanitizeName(description || ip);
+    } else {
+      baseName = sanitizeName(entry);
+    }
+
     let objectName = altPrefix
       ? `S_${sanitizeName(altPrefix)}_${baseName}`
       : `S_${baseName}`;
@@ -203,14 +254,7 @@ function generateCommands() {
   document.getElementById("previewBox").innerHTML = previewLines.join("<br>");
 }
 
-// small helper: escape HTML for preview
-function escapeHtml(s) {
-  return (s || "").replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;");
-}
-// escape quotes/newlines for CLI values
-function escapeForCli(s) {
-  return (s || "").replace(/"/g, '\\"');
-}
+/* ------------------ Event Listeners ------------------ */
 
 document.getElementById("groupName").addEventListener("input", generateCommands);
 document.getElementById("altPrefix").addEventListener("input", generateCommands);
@@ -218,16 +262,28 @@ document.getElementById("tagName").addEventListener("input", generateCommands);
 document.getElementById("inputList").addEventListener("input", generateCommands);
 document.getElementById("useTag").addEventListener("change", generateCommands);
 
-// initial run to populate preview/output
 generateCommands();
+
+/* ------------------ Tab Switching ------------------ */
+
+document.querySelectorAll(".tab-button").forEach(btn => {
+  btn.addEventListener("click", () => {
+    document.querySelectorAll(".tab-button").forEach(b => b.classList.remove("active"));
+    document.querySelectorAll(".tab-content").forEach(c => c.classList.remove("active"));
+
+    btn.classList.add("active");
+    document.getElementById(btn.dataset.tab).classList.add("active");
+  });
+});
 </script>
 
 <footer>
   <p class="footer">
-    Version 0.13 | Last Edited: 22.10.25 21:45
+    Version 0.15 | Last Edited: 22.01.26 13:17 CET
     <hr>
-    Source can be found on  <a href="https://github.com/thetschulian/PaloAlto-Helper">Github</a>
+    Source can be found on <a href="https://github.com/thetschulian/PaloAlto-Helper">Github</a>
   </p>
 </footer>
+
 </body>
 </html>
